--- a/Laboratorio 18/views/login.ejs
+++ b/Laboratorio 18/views/login.ejs
@@ -12,6 +12,8 @@
 
 <form action="/users/login" method="POST">
 
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
+
     <label for="username">Nombre de usuario:</label>
     <input name="username" id="username" class="input is-rounded" type="text" placeholder="lalo">
 
