--- a/Laboratorio 18/views/nuevo.ejs
+++ b/Laboratorio 18/views/nuevo.ejs
@@ -6,6 +6,8 @@
 
 <form action="/pizzas/nuevo" method="POST">
 
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
+
     <label for="nombre">Nombre:</label>
     <input required name="nombre" id="nombre" class="input is-rounded" type="text" placeholder="Hawaiana">
 
