--- a/Laboratorio 18/views/signup.ejs
+++ b/Laboratorio 18/views/signup.ejs
@@ -6,6 +6,8 @@
 
 <form action="/users/signup" method="POST">
 
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
+
     <label for="nombre">Nombre:</label>
     <input required name="nombre" id="nombre" class="input is-rounded" type="text" placeholder="Iván Ricardo Paredes Avilez">
 
